--- a/src/styles.css
+++ b/src/styles.css
@@ -47,60 +47,100 @@ form .search-button {
 }
 .current-city {
   font-family: "Questrial", sans-serif;
-  font-size: 45px;
-  margin: 0 auto;
+  font-size: 40px;
   color: #193327;
-  padding-bottom: 2px;
+  text-align: center;
+  margin: 0;
 }
+
+.condition-feel {
+  color: #193327;
+  text-align: center;
+  padding: 5px;
+  align-items: center;
+  margin-top: -10px;
+}
+
+#description {
+  font-weight: 500px;
+  font-size: 18px;
+  margin-bottom: 3px;
+}
+#feels-like {
+  font-style: italic;
+  font-size: 13px;
+  margin-bottom: 3px;
+  margin-top: 5px;
+}
+
+#humidity-wind {
+  font-size: 14px;
+  margin-bottom: 3px;
+  margin-top: -19px;
+}
+
+#humidity-wind strong {
+  color: #118a7e;
+}
+
 .current-info {
   color: #919190;
   font-size: 14px;
-  margin: 0 auto;
+  text-align: center;
+  margin: 0;
+  padding-top: 10px;
+  padding-bottom: 5px;
 }
-.current-info strong {
-  color: #118a7e;
-}
+
 .current-weather {
   display: flex;
-  justify-content: space-between;
-  margin-bottom: -55px;
+  flex-direction: column;
+  align-items: center;
+  gap: 2px;
+  margin-bottom: 10px;
 }
 .current-temp {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2px;
   color: #193327;
 }
 .current-temp-emoji {
-  position: relative;
   width: 69px;
   height: 69px;
-  right: 65px;
-  bottom: -8px;
+  object-fit: contain;
+  position: relative;
+  right: 5px;
+  margin: 0;
 }
 
 .current-temp-number {
-  position: relative;
   font-size: 50px;
   font-weight: bold;
-  bottom: 61px;
+  position: relative;
+  right: 15px;
 }
 .current-temp-value {
   font-size: 20px;
   font-weight: bold;
   position: relative;
-  bottom: 83px;
+  right: 17px;
+  top: -10px;
 }
 
 .forecast-container {
   display: flex;
   justify-content: space-between;
-  margin-top: 30px;
+  margin-top: 20px;
 }
 
 .weather-forecast {
-  border: 1px solid #f4f3f3;
   padding: 10px;
   border-radius: 10px;
   text-align: center;
   width: 80px;
+  background-color: rgba(255, 255, 255, 0.7);
 }
 
 .weather-forecast-date {
