--- a/src/styles.css
+++ b/src/styles.css
@@ -1,16 +1,26 @@
 body {
-  background: #bfd8d5;
+  background: linear-gradient(
+    117.9deg,
+    rgb(183, 248, 193) -3.5%,
+    rgb(169, 212, 250) 53.8%,
+    rgb(148, 231, 255) 100.4%
+  );
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   font-family: "Roboto", sans-serif;
 }
 header {
-  border-bottom: 1px solid #f4f3f3;
+  border-bottom: 1px solid #8d8d8d3b;
   padding-bottom: 30px;
 }
 main {
   padding: 30px 0;
 }
 form {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
@@ -23,8 +33,8 @@ form {
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.247);
   position: relative;
   background-image: linear-gradient(
-      rgba(255, 255, 255, 0.39),
-      rgba(255, 255, 255, 0.39)
+      rgba(177, 177, 177, 0.247),
+      rgba(177, 177, 177, 0.247)
     ),
     url("../src/img/anime-style-clouds.jpg");
   background-size: cover;
@@ -35,24 +45,32 @@ form {
 form .search-field {
   background-color: rgba(255, 255, 255, 0.938);
   color: rgba(50, 68, 57, 0.4);
-  border: none;
+  border: 1px solid #8d8d8d3b;
   font-size: 15px;
   padding: 10px;
   width: 70%;
   border-radius: 6px;
-  margin: 0 auto;
+  font-family: "Didact Gothic", sans-serif;
+  box-sizing: border-box;
+  height: 45px;
 }
 form .search-button {
-  margin-left: 0 auto;
-  font-size: 15px;
+  margin-left: 5px;
+  font-size: 17px;
   background-color: #2772db;
   color: #fff;
-  border: #fff;
   padding: 10px;
-  line-height: 1;
-  border-radius: 5px;
+  line-height: 1.1;
+  border: 1px solid #8d8d8d3b;
+  border-radius: 6px;
   text-align: center;
   font-weight: bold;
+  font-family: "Didact Gothic", sans-serif;
+  cursor: pointer;
+  width: 15%;
+  box-sizing: border-box;
+  /*box-shadow: 5px 5px 6px rgba(71, 71, 71, 0.4);*/
+  height: 45px;
 }
 .current-city {
   font-family: "Questrial", sans-serif;
@@ -93,7 +111,7 @@ form .search-button {
 }
 
 .current-info {
-  font-family: "Questrial", sans-serif;
+  font-weight: bold;
   color: #393e46;
   font-size: 14px;
   text-align: center;
@@ -110,7 +128,8 @@ form .search-button {
   margin-bottom: 10px;
   padding: 10px;
   border-radius: 10px;
-  background-color: rgba(255, 255, 255, 0.76);
+  background-color: rgba(255, 255, 255, 0.541);
+  box-shadow: 5px 5px 6px rgba(71, 71, 71, 0.247);
 }
 .current-temp {
   display: flex;
@@ -153,11 +172,14 @@ form .search-button {
   border-radius: 10px;
   text-align: center;
   width: 80px;
-  background-color: rgba(255, 255, 255, 0.76);
+  background-color: rgba(255, 255, 255, 0.541);
+  box-shadow: 5px 5px 6px rgba(71, 71, 71, 0.247);
 }
 
 .weather-forecast-date {
-  color: #919190;
+  font-family: "Questrial", sans-serif;
+  font-weight: bold;
+  color: #393e46;
   font-size: 14px;
   margin-top: 2px;
 }
@@ -173,6 +195,7 @@ form .search-button {
 }
 
 .weather-forecast-temp {
+  font-family: "Questrial", sans-serif;
   display: flex;
   justify-content: center;
   color: #0092ca;
@@ -182,19 +205,21 @@ form .search-button {
 
 .weather-forecast-temp-maxmin {
   padding: 0 5px;
-  margin-top: 5px;
+  margin-top: 3px;
   margin-bottom: -2px;
   text-align: center;
 }
 
 footer {
   color: #393e46;
-  font-family: "Didact Gothic", sans-serif;
-  font-size: 14px;
+  font-family: "Roboto", sans-serif;
+  font-size: 12px;
   text-align: center;
+  line-height: 1.6;
   margin: 0 auto;
-  border-top: 1px solid #f4f3f3;
-  padding-top: 15px;
+  border-top: 1px solid #8d8d8d3b;
+  padding-top: 10px;
+  margin-bottom: -20px;
 }
 footer a {
   color: #2772db;
